# bg-remover-app

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
static/css/: style.css
static/js/: main.js
templates/: index.html
