[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pydantic>=2.11.4",
    "python-jose>=3.4.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "rembg>=2.0.66",
    "uvicorn>=0.34.2",
]
